<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TruckRentalForm">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_gravity="center"
            android:text="@string/truckRental"
            android:textColor="#D500F9"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/firstName"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/firstName"/>

        <EditText
            android:id="@+id/lastName"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/lastName"/>

        <EditText
            android:id="@+id/dob"
            android:visibility="visible"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:ems="10"
            android:inputType="date"
            android:hint="@string/dob"/>

        <EditText
            android:id="@+id/address"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:ems="10"
            android:textSize="13dp"
            android:hint="Address: unit, street name, city, province, postal code, country"
            android:inputType="textPostalAddress"
            android:visibility="visible"/>

        <EditText
            android:id="@+id/email"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:orientation="horizontal">


            <RadioButton
                android:id="@+id/G1btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="G1"/>

            <RadioButton
                android:id="@+id/G2btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="G2"/>

            <RadioButton
                android:id="@+id/Gbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="G"/>
        </RadioGroup>

        <LinearLayout
            android:layout_width="fill_parent"
            android:id="@+id/pickupLayout"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/pickupDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:hint="@string/pickupdate"
                android:inputType="date"
                android:visibility="visible"/>

            <EditText
                android:id="@+id/pickupTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/pickuptime"
                android:inputType="time"
                android:textSize="15sp"
                android:visibility="visible"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:id="@+id/returnLayout"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <EditText
                android:id="@+id/returnDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:hint="@string/returndate"
                android:inputType="date"
                android:visibility="visible"/>

            <EditText
                android:id="@+id/returnTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/returntime"
                android:inputType="time"
                android:textSize="15sp"
                android:visibility="visible"/>
        </LinearLayout>



        <LinearLayout
            android:layout_width="fill_parent"
            android:id="@+id/lastLayout"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/maxDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/maxDistance"
                android:inputType="time"
                android:textSize="15sp"
                android:visibility="visible"/>

            <EditText
                android:id="@+id/areaUsed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Canadian Provincial Area"
                android:inputType="textPersonName"
                android:textSize="15sp"
                android:visibility="visible"/>
        </LinearLayout>


        <Button
            android:id="@+id/Submitbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Submit"/>



    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>